# documentation-generator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  NOTICE  README.md  SESSION_NOTES.md  docgen.catalog.yaml  pyproject.toml
docs/: demo-function.md  index.html  session-notes-2026-05-08-manim-declarative-specs.md  session-notes-2026-05-09-scene-spec-layout-engine.md
examples/: lesson_compile.docgen.yaml  sample_test.py
milestones/: README.md  checklist-playwright-auto-narration.md  milestone-1.md  next-session-dogfood.md  upstream-dogfood.md
scripts/: gh-issue-catalog-workflow.sh  render-suite-diagrams.sh
session-notes/: 2026-05-05-session-notes.md
specs-on-hold/: demo-generator.md  demonstrate-fe-linkage.md
tests/: _render_tools_bootstrap.py  conftest.py  test_ai_provider.py  test_bundle_clean.py  test_bundled.py  test_catalog_cli.py  test_chat.py  test_cli_env.py  test_compose.py  test_compose_extras.py  test_config.py  test_demo_function.py  test_discovery.py  test_init.py  test_manim_layout.py  test_manim_runner.py  test_manim_scene_lint.py  test_manim_scene_support.py  test_narrate_from_source.py  test_narration_lint.py  test_openai_retry.py  test_package_exports.py  test_pages.py  test_path_filters.py  test_per_function.py  test_pf_align.py  test_pf_keyframes.py  test_pf_trace.py  test_pipeline.py  test_playwright_runner.py  test_playwright_sync.py  test_playwright_test_runner.py  test_playwright_trace.py  test_scenario.py  test_scene_gen.py  test_scene_generate.py  test_scene_lint.py  test_scene_spec.py  test_scene_spec_generate.py  (+8 more)
(+152 files in other folders)
